mychart/templates/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app
        image: woodstock93/api_server:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
          - name: static-files
            mountPath: /staticfiles
      volumes:
        - name: static-files
          persistentVolumeClaim:
            claimName: django-static-pvc


---
# START Service
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: django-app
# END SERVICE
