mychart/templates/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
  labels:
    name: postgres-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres
  template:
    metadata:
      name: postgres
      labels:
        name: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/data
            name: postgres-volume-mount
      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
# START Service
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: postgres-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    name: postgres
# END SERVICE
